apps/02-monitoring/grafana-ingress/overlays/test/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: monitoring
resources:
  - ../../base
  - grafana-ingress.yaml
labels:
  - includeSelectors: false
    pairs:
      environment: test

patches:
